feat(用户行为统计）

--- a/后端/salary/pom.xml
+++ b/后端/salary/pom.xml
@@ -1,5 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
+		 xmlns:aop="http://www.springframework.org/schema/aop">
+
   <modelVersion>4.0.0</modelVersion>
   	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -36,23 +38,34 @@
 		  <!--(2020/5/18) Spring Boot默认的日志框架Logback，所以我们在引入log4j之前，需要先排除该包的依赖，再引入log4j的依赖-->
 		  <exclusions>
 			  <exclusion>
+				  <groupId>org.springframework.boot</groupId>
+				  <artifactId>spring-boot-starter-logging</artifactId>
+			  </exclusion>
+			  <exclusion>
 				  <groupId>ch.qos.logback</groupId>
 				  <artifactId>logback-classic</artifactId>
 			  </exclusion>
-			  <exclusion>
-				  <artifactId>log4j-over-slf4j</artifactId>
-				  <groupId>org.slf4j</groupId>
-			  </exclusion>
+			  <!--<exclusion>
+                  <groupId>ch.qos.logback</groupId>
+                  <artifactId>logback-classic</artifactId>
+              </exclusion>
+              <exclusion>
+                  <artifactId>log4j-over-slf4j</artifactId>
+                  <groupId>org.slf4j</groupId>
+              </exclusion>-->
 		  </exclusions>
 	  </dependency>
-	  <dependency>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-thymeleaf</artifactId>
-	</dependency>
+
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-web</artifactId>
+
 	</dependency>
+	  <dependency>
+		  <groupId>org.codehaus.janino</groupId>
+		  <artifactId>janino</artifactId>
+		  <version>3.1.2</version>
+	  </dependency>
 	<dependency>
 		<groupId>org.mybatis.spring.boot</groupId>
 		<artifactId>mybatis-spring-boot-starter</artifactId>
@@ -105,11 +118,6 @@
 		  <groupId>org.apache.commons</groupId>
 		  <artifactId>commons-lang3</artifactId>
 	  </dependency>
-	  <!-- 添加 Web 依赖 -->
-	  <dependency>
-		  <groupId>org.springframework.boot</groupId>
-		  <artifactId>spring-boot-starter-web</artifactId>
-	  </dependency>
 	  <!-- lombok 支持 -->
 	  <dependency>
 		  <groupId>org.projectlombok</groupId>
@@ -126,6 +134,32 @@
 		  <groupId>org.slf4j</groupId>
 		  <artifactId>slf4j-log4j12</artifactId>
 	  </dependency>
+	  <!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
+	  <dependency>
+		  <groupId>commons-lang</groupId>
+		  <artifactId>commons-lang</artifactId>
+		  <version>2.4</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>net.sf.ezmorph</groupId>
+		  <artifactId>ezmorph</artifactId>
+		  <version>1.0.6</version>
+	  </dependency>
+	  <!-- https://mvnrepository.com/artifact/commons-collections/commons-collections -->
+	  <dependency>
+		  <groupId>commons-collections</groupId>
+		  <artifactId>commons-collections</artifactId>
+		  <version>3.2.2</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>org.springframework.boot</groupId>
+		  <artifactId>spring-boot-starter-aop</artifactId>
+		  <version>2.3.0.RELEASE</version>
+	  </dependency>
+
+
+
+
   </dependencies>
   <build>
 	  <!-- 添加构建工具 -->
